# sloth-diffusion

./: .gitignore  crawl.py  make_data.py  pyproject.toml  train.py
wandb/: latest-run
wandb/run-20220830_103636-16zxdzwh/: run-16zxdzwh.wandb
wandb/run-20220830_103636-16zxdzwh/files/: config.yaml  wandb-metadata.json
wandb/run-20220830_103705-1fb612me/: run-1fb612me.wandb
wandb/run-20220830_103705-1fb612me/files/: config.yaml  wandb-metadata.json
wandb/run-20220830_103824-1ixts76s/: run-1ixts76s.wandb
wandb/run-20220830_103824-1ixts76s/files/: config.yaml  wandb-metadata.json
wandb/run-20220830_104334-2j00q1qo/: run-2j00q1qo.wandb
wandb/run-20220830_104334-2j00q1qo/files/: config.yaml  wandb-metadata.json
wandb/run-20220830_104505-3fewlw7n/: run-3fewlw7n.wandb
wandb/run-20220830_104505-3fewlw7n/files/: config.yaml  requirements.txt  wandb-metadata.json
wandb/run-20220902_224431-279887io/: run-279887io.wandb
wandb/run-20220902_224431-279887io/files/: config.yaml  wandb-metadata.json
wandb/run-20220902_224510-s6b3lm4p/: run-s6b3lm4p.wandb
wandb/run-20220902_224510-s6b3lm4p/files/: config.yaml  requirements.txt  wandb-metadata.json
