[tool.poetry]
name = "sloth-diffusion"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
torchvision = "^0.13.1"
pytorch-lightning = "^1.7.1"
bs4 = "^0.0.1"
types-requests = "^2.28.8"
html5lib = "^1.1"
lxml = "^4.9.1"
diffusers = "^0.2.4"
wandb = "^0.13.2"
diffusions = "^0.1.11"
joblib = "^1.1.0"
transformers = "^4.22.0"
numpy = "1.21.6"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^22.6.0"
mypy = "^0.971"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
